--- a/service/style.css
+++ b/service/style.css
@@ -9,7 +9,7 @@ body { margin: 0px ; background: blanchedalmond;}
 /* Menu CSS */
 .menu {  background: #1d1d1d; }
 .Nav { margin: 0px; padding: 0px; display: flex;}
-.Nav-tab { color: white; list-style: none;  padding: 10px 20px; text-align: center; cursor: pointer;}
+.Nav-tab { color: white; list-style: none;  padding: 10px 20px; text-align: center; cursor: pointer; transition: all 0.2s ease;}
 .Nav-tab:hover { background:#9c9c9c; }
 .right-nav { float: right; background: #1d1d1d; } 
 
@@ -22,7 +22,7 @@ h2 { margin: 0px;}
 
 /* Tab 1 CSS */
 .content form .user-details { display: flex ; flex-wrap: wrap; justify-content: space-between;}
-.content form .input-div { width: calc(100% / 2 - 20px); margin-bottom: 15px;}
+.content form .input-div { width: calc(100% / 2 - 20px); margin-bottom: 15px; height: fit-content;}
 .content form .input-div .details {font-weight: bold; font-size: 18px; }
 .content form .user-details .input-div input {  
     height: 30px;
@@ -36,10 +36,11 @@ h2 { margin: 0px;}
     transition: all 0.3s ease;
 }
 
-.content form .user-details .input-div input[type='text']:focus ,
-.content form .user-details .input-div input[type='text']:valid{
-    border-color: #00af05;
-}
+.content form .user-details .input-div input[type='number'] {width: calc(100% / 6 - 20px);}
+
+.content form .user-details .input-div input[type='text']:focus {border-color: grey;}
+.content form .user-details .input-div input[type='text']:valid{border-color: #00af05;}
+
 
 .content form .user-details .input-div select {
     height: 30px;
@@ -57,29 +58,59 @@ h2 { margin: 0px;}
  {border-color: #00af05;}
  .content form .user-details .input-div select:invalid {border-color: #ccc;}
 
-.user-details .input-div input[type='radio']{
-    /* display: none; */
+.user-details .input-div .radiobtn{
+    width: 1px !important;
+    height: 1px !important;
+    position: absolute;
+    left: 25%;
 }
 .input-div .category { 
-    width: 90%;
-    background: red;
+    width: 70%;
+    /* background: red; */
     display: flex;
-    /* justify-content: space-evenly; */
-    margin: 5px 0px;}
+     justify-content: space-evenly; 
+    margin: 5px 0px;
+}
 
-.user-details .input-div label {cursor: pointer; margin-right: 15%;  margin-left: 5%; display: flex;     align-items: center;}
+.user-details .input-div label {cursor: pointer; display: flex;     align-items: center;}
 .user-details .input-div label .dot { 
     width: 14px;
     height: 14px;
     background: white;
     /* display: inline-flex; */
     border-radius: 50%;
-    border: 4px solid transparent;
+    border: 1.5px solid black;
     margin-right: 10px;
     margin-left: 15px;
 }
+span.warranty_type {  font-size: 17px;}
+.input-div #dot1:checked ~ .category .one , .input-div #dot2:checked ~ .category .two 
+{background: #00af05 ; border-color: #1d1d1d; transition: all 0.3s ease;}
 
-input:checked ~ .one {background: #1d1d1d;}
+.user-details .input-div textarea {margin: 0px ; width: 92% ; height: 150px ; outline: none;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding-left: 10px;
+    font-size: 15px;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;}
+    
+.content form .user-details .input-div textarea:focus {border-color: grey;}
+.content form .user-details .input-div textarea:valid{border-color: #00af05;}
+
+
+.button {display: flex;}
+.button input {     width: 25%;
+    height: 30px;
+    margin: 0px 12%;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    border-bottom-width: 2px;
+    font-size: 18px;
+    font-weight: bolder;
+    font-family: serif;
+}
+.button input:hover {background: gray; color: white;}
 
 
 
@@ -91,6 +122,8 @@ input:checked ~ .one {background: #1d1d1d;}
     .Nav { flex-direction: column; }
     .Title-name {padding-top: 30%;}
     .content form .input-div { width: calc(100% - 20px); margin-bottom: 15px;}
-    .content form {display: flex;}
+    .content form {display: block;}
+    .input-div .category {width: 90%;}
+    .content form .user-details .input-div input[type='number'] {width: calc(100% / 6 - 5px);}
     }
     
